Beginning the link between the model and view. Some refactoring is still necessary.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:name=".view.GameView"
             android:label="@string/title_activity_game_view">
         </activity>
+        <activity android:name=".view.PlayerView">
+        </activity>
     </application>
 
 </manifest>
