Added DialogFragments to display the rest of the model's data. All aspects of the model can now be displayed in the GameActivity view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.GameView"
-            android:label="@string/title_activity_game_view">
-        </activity>
-        <activity android:name=".view.PlayerView">
+            android:name=".view.GameActivity">
         </activity>
     </application>
 
